[gd_scene load_steps=4 format=3 uid="uid://cb0culmj38qpg"]

[ext_resource type="Script" uid="uid://c3okh3jkob2sd" path="res://scenes/UI/DataPanel/data_panel_container.gd" id="1_4kwcw"]
[ext_resource type="Texture2D" uid="uid://d040604pwh8w5" path="res://assets/themes/src/addons/Themey/themes/clashy/graphics/coin.svg" id="1_8on6c"]
[ext_resource type="Texture2D" uid="uid://d388p8y56v4ip" path="res://assets/themes/src/addons/Themey/themes/clashy/graphics/gem.svg" id="2_4kwcw"]

[node name="DataPanelContainer" type="MarginContainer"]
custom_minimum_size = Vector2(260, 0)
mouse_filter = 2
script = ExtResource("1_4kwcw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="Panel" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"PanelEmbedded"

[node name="Label2" type="Label" parent="VBoxContainer/Panel"]
layout_mode = 2
text = "Score: 9,000"
horizontal_alignment = 1

[node name="Panel4" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"PanelEmbedded"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel4"]
layout_mode = 2
mouse_filter = 2

[node name="Label2" type="Label" parent="VBoxContainer/Panel4/VBoxContainer"]
layout_mode = 2
text = "Your Reward"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel4/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Panel4/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Panel4/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("1_8on6c")
stretch_mode = 5

[node name="WaterLabel" type="Label" parent="VBoxContainer/Panel4/VBoxContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "500"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/Panel4/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Panel4/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_4kwcw")
stretch_mode = 5

[node name="SteelLabel" type="Label" parent="VBoxContainer/Panel4/VBoxContainer/HBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "500"
